# podshrinker

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  env.txt.example  podshrinker.cabal  podshrinker.py  pyproject.toml  requirements.txt
src/: Main.hs
templates/: root.html
